--- a/src/main/resources/templates/ajouter-relation.html
+++ b/src/main/resources/templates/ajouter-relation.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil - Pay My Buddy</title>
+    <title>Ajouter Relation - Pay My Buddy</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="/css/profil.css" rel="stylesheet">
+    <style>
+        .content-container {
+            margin-top: 200px; /* Increase this value for more space */
+        }
+    </style>
 </head>
 <body>
 
@@ -26,10 +31,10 @@
                     <a class="nav-link" th:href="@{/transfer}">Transférer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/profil}">Profil</a>
+                    <a class="nav-link" th:href="@{/profil}">Profil</a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" th:href="@{/ajouter-relation}">Ajouter relation</a>
+                <li class="nav-item">
+                    <a class="nav-link active" th:href="@{/ajouter-relation}">Ajouter relation</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/logout}">Se déconnecter</a>
@@ -39,30 +44,23 @@
     </div>
 </nav>
 
-<!-- User Data Display Section -->
-<div class="container mt-5">
-   <!--   <h2 class="text-center">Informations utilisateur</h2> -->
-    <div class="table-responsive">
-        <table class="table table-borderless profile-table">
-            <tbody>
-                <tr>
-                    <th scope="row">Username</th>
-                    <td><span th:text="${username}"> User</span></td><!-- User's Username -->
-            <!--  <td><input type="text" id="username" name="username" class="form-control" placeholder="Nouveau username" autocomplete="username"></td> -->
-                </tr>
-                <tr>
-                    <th scope="row">Mail</th>
-                    <td th:text="${email}">Email</td><!-- User's Username -->
-             <!--   <td><input type="email" id="email" name="email" class="form-control" placeholder="Nouveau email" autocomplete="email"></td> --> 
-                </tr>
-                <tr>
-                    <th scope="row">Mot de passe</th>
-                    <td th:text="${password}">Password</td><!-- User's Username -->
-               <!-- <td><input type="password" id="password" name="password" class="form-control" placeholder="Nouveau mot de passe" autocomplete="new-password"></td>  -->
-                    <td><button type="button" class="btn btn-warning">Modifier</button></td>
-                </tr>
-            </tbody>
-        </table>
+<!-- Add Relation Section -->
+<div class="container content-container">
+   <!--  <h2 class="text-center">Ajouter une relation</h2> --> 
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-6">
+            <form th:action="@{/addRelation}" method="post">
+                <div class="form-group">
+                    <label for="relationSearch">Chercher une relation</label>
+                    <div class="input-group">
+                        <input type="text" id="relationSearch" name="relationSearch" class="form-control" placeholder="Entrez un email ou un nom d'utilisateur">
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-warning ml-2">Ajouter</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
