--- a/src/main/resources/templates/ajouter-relation.html
+++ b/src/main/resources/templates/ajouter-relation.html
@@ -49,17 +49,46 @@
    <!--  <h2 class="text-center">Ajouter une relation</h2> --> 
     <div class="row justify-content-center mt-4">
         <div class="col-md-6">
-            <form th:action="@{/addRelation}" method="post">
+            <form id="relationForm" th:action="@{/addRelation}" method="post">
                 <div class="form-group">
                     <label for="relationSearch">Chercher une relation</label>
                     <div class="input-group">
-                        <input type="text" id="relationSearch" name="relationSearch" class="form-control" placeholder="Entrez un email ou un nom d'utilisateur">
+                        <input type="text" id="relationSearch" name="relationSearch" class="form-control" placeholder="Entrez un email d'utilisateur">
                         <div class="input-group-append">
-                            <button type="submit" class="btn btn-warning ml-2">Ajouter</button>
+                            <button type="button" class="btn btn-warning ml-2" onclick="confirmAddRelation()">Ajouter</button>
                         </div>
                     </div>
                 </div>
+                 <!-- Display error message if present -->
+                <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+                    <span th:text="${errorMessage}"></span>
+                </div>
+                <!-- Display success message if present -->
+                <div th:if="${successMessage}" class="alert alert-success" role="alert">
+                    <span th:text="${successMessage}"></span>
+                </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmModalLabel">Confirmer l'ajout de la relation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Êtes-vous sûr de vouloir ajouter cette relation?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-primary" onclick="submitForm()">Confirmer</button>
+            </div>
         </div>
     </div>
 </div>
@@ -68,6 +97,15 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    function confirmAddRelation() {
+        $('#confirmModal').modal('show');
+    }
+
+    function submitForm() {
+        $('#relationForm').submit();
+    }
+</script>
 
 </body>
 </html>
