--- a/src/main/resources/templates/ajouter-relation.html
+++ b/src/main/resources/templates/ajouter-relation.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/transfer}">Transférer</a>
+                    <a class="nav-link" th:href="@{/transfer/page}">Transférer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/profil}">Profil</a>
