--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -29,6 +29,7 @@
             <div class="form-group">
 						<span>New user? <a href="/" th:href="@{/registration}">Register
 								here</a></span>
+				    	<span>Or <a href="/"  th:href="@{/oauth2/authorization/github}" >Login with GitHub</a></span>			
 		    </div>
         </div>
     </div>
